--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <h2 class="title">👤 Random User Profile (Fetch API)</h2>
+  <h2 class="title">👤 Random User Profile </h2>
 
   <div class="card">
     <img id="userImg" src="" alt="User">
